// Generated from models.yaml - DO NOT EDIT MANUALLY
syntax = "proto3";

option java_package = "dev.appget.model";
option java_multiple_files = true;

package appget;

message Roles {
  string name = 1;
}

message Employees {
  string name = 1;
  int32 age = 2;
  string role_id = 3;
  optional string country_of_origin = 4;
}

message Vendors {
  string name = 1;
  int32 location_id = 2;
}
