// Generated from models.yaml - DO NOT EDIT MANUALLY
syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "appget_common.proto";

option java_package = "dev.appget.finance.model";
option java_multiple_files = true;

package finance;

message Invoices {
  string invoice_number = 1;
  appget.common.Decimal amount = 2;
  google.protobuf.Timestamp issue_date = 3;
}

message Locations {
  string locationid = 1;
  string locationname = 2;
  double longitude = 3;
  double latitude = 4;
}
